--- a/cart.html
+++ b/cart.html
@@ -25,7 +25,7 @@
 
 <body>
     <!--start header section-->
-    <header>
+    <header class="fixed-top">
         <div class="header_top">
             <div class="container">
                 <div class="row">
@@ -60,7 +60,7 @@
             </div>
         </div>
         <div class="header_menu">
-            <nav class="navbar navbar-expand-lg">
+            <nav class="navbar navbar-expand-lg header_top_color">
                 <div class="container">
                   <a class="navbar-brand" href="#"><img src="./img/logo/Logo.svg"></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
