--- a/shop.html
+++ b/shop.html
@@ -23,7 +23,7 @@
 
 <body>
     <!--start header section-->
-    <header>
+    <header class="fixed-top">
         <div class="header_top">
             <div class="container">
                 <div class="row">
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="header_menu">
-            <nav class="navbar navbar-expand-lg">
+            <nav class="navbar navbar-expand-lg header_top_color">
                 <div class="container">
                   <a class="navbar-brand" href="#"><img src="./img/logo/Logo.svg"></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -117,24 +117,28 @@
     <!--ending header section-->
 
 
-
     <!-- start breadcomp -->
 
-    <div class="container">
-      <div class="bread">
-        <nav aria-label="breadcrumb">
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#"><i class="fa-solid fa-house"></i></a></li>
-            <li class="breadcrumb-item"><a href="#">Categories</a></li>
-            <li class="breadcrumb-item"><a href="#">Vegetables</a></li>
-          </ol>
-        </nav>
+    <section class="bred1">
+      <div class="container">
+          <div class="bread">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#"><i class="fa-solid fa-house"></i></a></li>
+                <li class="breadcrumb-item"><a href="#">Categories</a></li>
+                <li class="breadcrumb-item"><a href="#">Vegetables</a></li>
+              </ol>
+            </nav>
+    
+          </div>
+    
+        </div>
 
-      </div>
+  </section>
 
-    </div>
+  <!-- ending breadcomp -->
 
-    <!-- ending breadcomp -->
+
 
     <!-- start shop next -->
 
